--- a/Bergstrom_Sparky.html
+++ b/Bergstrom_Sparky.html
@@ -2,7 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Sparky the Sun Devil</title>		
+		<title>Sparky the Sun Devil</title>	
+		<link rel="stylesheet" href="Bergstrom_Sparky_Styles.css">
+		<meta name="author" content="Michael Bergstrom">
 	</head>
 
 	<body>
